--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                     - Cilj se sačuvati se od Vulina i sličnih, po jetru razornih, pojava<br/>
                     - Pravila za svaku karticu su sledeća:</p>
             </div>
-
-            <div class="card text-center" style="display: none;">
-              <div class="row justify-content-center" >
-                <div>
-                  <img class="card-img-top" >
-                </div>
+              <div class="card text-center col-auto" style="display: none;">
+                <div class="row no-gutters">
+                  <div class="col-auto">
+                    <img class="card-img-top">
+                  </div>
+                  <div class="col">
+                    <div class="card-body card-block">
+                      <h5 class="card-title font-weight-bold display-2"></h5>
+                      <p class="card-text display-4">a</p>
+                    </div>
+                  </div>
               </div>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold display-3"></h5>
-                <p class="card-text display-4">a</p>
-              </div>
-            </div>
-                            
+            </div>        
         </div>
 
 
